# dynamic-minio-watermark

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  main.rs
