[package]
name = "minio-watermarker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
embedded_font = []

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
image = "0.24"
imageproc = "0.23"
rusttype = "0.9"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.0"
lazy_static = "1.4"
num_cpus = "1.16"
dotenv = "0.15.0"
